_1.2.2_nginx_ingress/test/old1/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /test-ingress
            pathType: Prefix
            backend:
              service:
                name: test-ingress
                port:
                  name: svc-port
