_1.2.2_nginx_ingress/test/old1/app/test_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-ingress
  namespace: app
  labels:
    app.kubernetes.io/name: test-ingress
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: test-ingress
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: test-ingress
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: test-ingress
          image: hashicorp/http-echo
          imagePullPolicy: IfNotPresent
          args:
            - -listen=:3000
            - -text=test-ingress
          ports:
            - name: app-port
              containerPort: 3000
          resources:
            requests:
              cpu: 0.125
              memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: test-ingress
  namespace: app
  labels:
    app.kubernetes.io/name: test-ingress
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: test-ingress
  ports:
    - name: svc-port
      port: 80
      targetPort: app-port
      protocol: TCP
